﻿更新履歴

==== Unreleased
 * NEW: Cookie使用時のReplyタブの更新に対応（/statuses/mentions_timeline.json 廃止に伴う対応）
 * NEW: Cookie使用時のFav追加・削除に対応
 * FIX: Cookie使用時にツイート検索の言語指定が効かない不具合を修正
 * FIX: ツイート検索のキーワードを後から変更すると検索結果が表示されない不具合を修正
 * FIX: Cookie使用時にステータスバーにRecentタブのレートリミットが表示されない不具合を修正
 * FIX: 取得したツイートの中身が空だった場合のエラー処理を改善
 * FIX: タイムラインの取得結果にレートリミットに関するメッセージが含まれていた場合はエラーとして扱う

==== Ver 3.12.0(2024/01/20)
 * NEW: graphqlエンドポイントを使用したホームタイムラインの取得に対応

==== Ver 3.11.0(2024/01/07)
 * NEW: Cookie使用時の関連発言表示に対応
 * FIX: APIリクエストのタイムアウト時に接続が切断されない場合がある不具合を修正
 * FIX: 存在しないユーザーのプロフィールを取得しようとした場合のエラーが適切に処理されない不具合を修正

==== Ver 3.10.1(2023/12/23)
 * FIX: OAuth 1.0a によるAPIアクセスに失敗する不具合を修正

==== Ver 3.10.0(2023/12/16)
 * NEW: graphqlエンドポイント経由で取得した引用ツイートの表示に対応
 * FIX: APIリクエストがタイムアウトした場合のキャンセル処理を改善

==== Ver 3.9.0(2023/12/03)
 * NEW: graphqlエンドポイントに対するレートリミットの表示に対応
 * CHG: タイムライン更新時に全件ではなく新着投稿のみ差分を取得する動作に変更
 * FIX: 設定したタイムアウト時間を超えてAPI接続が持続する場合がある不具合を修正
 * FIX: プロフィール情報のURL欄のパースに失敗する場合がある不具合を修正
   - この問題が起きるユーザーのツイートが含まれているとタイムラインの読み込みに失敗する問題も改善されます

==== Ver 3.8.0(2023/11/29)
 * NEW: graphqlエンドポイントを使用した検索タイムラインの取得に対応
 * NEW: graphqlエンドポイントを使用したプロフィール情報の取得に対応
 * NEW: graphqlエンドポイントを使用したユーザータイムラインの取得に対応
 * CHG: タイムライン更新が停止する不具合が報告される件への暫定的な対処
   - タイムライン更新に30秒以上掛かっている場合は完了を待機せず次のタイマーを開始させる
   - タイムライン更新の次回実行が1時間以上先になる場合は異常値としてタイマーをリセットする
 * FIX: 動画のサムネイル表示時に再生可能であることを示すアイコンが表示されない不具合を修正
 * FIX: リスト更新時に発生したネットワークエラーが適切に処理されない不具合を修正
 * FIX: 起動直後にタイムラインの取得が重複して行われる不具合を修正

==== Ver 3.7.1(2023/07/20)
 * FIX: Cookie使用時に複数回ツイートを投稿するとDelaying?のエラーが表示される不具合を修正
 * FIX: 自己リプライのスレッドに含まれるツイートを発言一覧で選択するとエラーが発生する不具合を修正

==== Ver 3.7.0(2023/07/19)
 * NEW: Cookie使用時のツイート投稿・削除に対応
 * NEW: Cookie使用時のリツイートおよびリツイートの取消に対応
 * NEW: Cookie使用時の個別ツイートの取得に対応
 * NEW: graphqlエンドポイントを使用しているタブでの「前データを取得」に対応
 * NEW: graphqlエンドポイントが返すエラーメッセージの表示に対応
 * CHG: Google画像検索のURLの変更に対応
 * FIX: 発言一覧でDMを選択中に発言詳細部の日時ラベルをクリックするとエラーが発生する不具合を修正
 * FIX: Cookie使用時に「Listの発言取得に公式RTを含める」の設定が適用されない不具合を修正

==== Ver 3.6.2(2023/07/07)